Feat: 셩격 테스트 결과 api 추가
