# backend/static/swagger.json
@@ -1,11 +1,11 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "CO SHOW 전시회 체험 서비스 API",
-    "description": "사용자가 이미지를 업로드하고, 스타일 변환을 적용하며, 이미지를 다운로드할 수 있는 API입니다.",
+    "title": "CO SHOW 전시회 Articket API",
+    "description": "사용자가 이미지를 업로드하고, 성격 테스트 결과와 해당 화가의 스타일로 변환된 이미지의 경로를 받을 수 있는 API입니다.",
     "version": "1.0.0"
   },
-  "host": "192.168.0.3:5000",
+  "host": "192.168.67.155:5000",
   "basePath": "/",
   "schemes": ["http"],
   "tags": [
@@ -14,18 +14,30 @@
       "description": "이미지 업로드 API"
     },
     {
-      "name": "이미지 변환",
+      "name": "성격 테스트 결과 전송",
+      "description": "성격 테스트 결과 전송 API"
+    },
+    {
+      "name": "이미지 변환 및 전송",
       "description": "이미지 변환 및 스타일 조정 API"
     }
   ],
   "paths": {
-    "/upload-image": {
+    "/upload-image/{name}": {
       "post": {
         "tags": ["이미지 업로드"],
         "summary": "이미지 업로드",
         "description": "사용자가 이미지를 업로드합니다. 업로드된 이미지는 서버에 저장되며, 변환 작업을 수행할 준비가 됩니다.",
         "consumes": ["multipart/form-data"],
         "parameters": [
+          {
+            "in": "path",
+            "name": "name",
+            "type": "string",
+            "description": "사용자가 업로드할 이미지의 이름",
+            "required": true,
+            "default": "기몌영"
+          },
           {
             "in": "formData",
             "name": "image",
@@ -51,26 +63,53 @@
         }
       }
     },
-    "/generate-images/{style}": {
+    "/get-personality-result/{options}": {
       "post": {
-        "tags": ["이미지 변환"],
-        "summary": "이미지 생성 및 스타일 변환",
-        "description": "사용자가 업로드한 이미지를 지정된 스타일로 변환합니다. 변환된 이미지는 원본 이미지와 함께 저장됩니다.",
+        "tags": ["성격 테스트 결과 전송"],
+        "summary": "성격 테스트 결과",
+        "description": "사용자의 선택을 바탕으로 예술가 유형과 해당 화가의 이름을 반환합니다.",
         "parameters": [
           {
             "in": "path",
-            "name": "style",
-            "description": "이미지 변환에 사용할 스타일. 예: 'portrait' 또는 'landscape'.",
+            "name": "options",
+            "description": "사용자의 선택 리스트 (A와 B 값의 배열)",
             "required": true,
-            "type": "string"
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "default": ["A", "A", "B", "B", "A", "A"]
           }
         ],
+        "responses": {
+          "200": {
+            "description": "테스트 결과 성공",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "artist": { "type": "string" }
+              }
+            }
+          },
+          "400": {
+            "description": "선택 사항이 누락되었습니다."
+          }
+        }
+      }
+    },
+    "/get-generated-images": {
+      "post": {
+        "tags": ["이미지 변환 및 전송"],
+        "summary": "이미지 생성 및 이미지 경로 전송",
+        "description": "사용자가 업로드한 이미지를 지정된 화가 스타일로 변환하고 경로를 반환합니다. 변환된 이미지는 원본 이미지와 함께 저장됩니다.",
         "responses": {
           "200": {
             "description": "이미지 변환 성공",
             "schema": {
               "type": "object",
               "properties": {
+                "user_name": { "type": "string" },
+                "artist": { "type": "string" },
                 "generated_images": {
                   "type": "array",
                   "items": { "type": "string" }
@@ -79,41 +118,10 @@
             }
           },
           "400": {
-            "description": "이미지 또는 스타일 정보 누락"
+            "description": "이미지 또는 화가 스타일 정보 누락"
           },
           "500": {
             "description": "이미지 생성 실패"
-          }
-        }
-      }
-    },
-    "/get-generated-images": {
-      "get": {
-        "tags": ["이미지 변환"],
-        "summary": "생성된 이미지 및 업로드된 이미지 가져오기",
-        "description": "서버에 저장된 업로드된 이미지와 생성된 이미지 목록을 반환합니다. 이미지는 base64로 인코딩된 형식으로 전송됩니다.",
-        "responses": {
-          "200": {
-            "description": "이미지 목록 반환 성공",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "images": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "filename": { "type": "string" },
-                      "image_base64": { "type": "string" },
-                      "type": {
-                        "type": "string",
-                        "description": "uploaded 또는 generated"
-                      }
-                    }
-                  }
-                }
-              }
-            }
           }
         }
       }
